Bevel modifier has bad input width for percent #59151

Closed
opened 2018-12-11 00:24:38 +01:00 by Cătălin George Feștilă · 18 comments

System Information
Operating system: Windows 8.1
Graphics card: NVIDIA 740M

Blender Version
Broken: 2.8 beta
(example: 2.79b release)
(example: 2.80, edbf15d3c0, blender2.8, 2018-11-28, as found on the splash screen)
Worked: (optional)
old version worked
Short description of error
The bevel modifier can be selected with percent for weight
The old version 2.8 can be set up to 100
The new Blender 2.8 beta is set into another range
Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).
Add a Bevel modifier and try to set the weight with select of limit method weight and Width method to percent
The width slider is not set to up 100 and has a bad value.

**System Information** Operating system: Windows 8.1 Graphics card: NVIDIA 740M **Blender Version** Broken: 2.8 beta (example: 2.79b release) (example: 2.80, edbf15d3c044, blender2.8, 2018-11-28, as found on the splash screen) Worked: (optional) old version worked **Short description of error** The bevel modifier can be selected with percent for weight The old version 2.8 can be set up to 100 The new Blender 2.8 beta is set into another range **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). Add a Bevel modifier and try to set the weight with select of limit method weight and Width method to percent The width slider is not set to up 100 and has a bad value.

Added subscriber: @mythcat

Added subscriber: @mythcat

Added subscriber: @ZedDB

Added subscriber: @ZedDB

I can not reproduce this with a build from today. Please try a recent build from https://builder.blender.org/download/

I can not reproduce this with a build from today. Please try a recent build from https://builder.blender.org/download/

see this screenshot with the red area bug
blender_2.80beta_bevel_error.png

see this screenshot with the red area bug ![blender_2.80beta_bevel_error.png](https://archive.blender.org/developer/F5943487/blender_2.80beta_bevel_error.png)

Yes, as I said yesterday, for me it slides correctly from 0 to 100 with that setting. Unless you manually input numbers of course. But even if I input a value over 100, I can still slide it down and it again locks at 0-100 as expected.

Did you try any more recent beta versions than the one you posted? And if so what build date and hash did it have. (Available on the splash screen)

Yes, as I said yesterday, for me it slides correctly from 0 to 100 with that setting. Unless you manually input numbers of course. But even if I input a value over 100, I can still slide it down and it again locks at 0-100 as expected. Did you try any more recent beta versions than the one you posted? And if so what build date and hash did it have. (Available on the splash screen)

Maybe is fixed into your version.
My system-info show me this about the 2.80 beta (blender-2.80-e79bb957fc3-win64) :

============================================
= Blender 2.80 (sub 35) System Information =
============================================


Blender:
============================================

version: 2.80 (sub 35), branch: blender2.8, commit date: 2018-12-08 17:06, hash: e79bb957fc3, type: Release
build date: 08/12/2018, 17:54
platform: Windows
binary path: 'C:\\Users\\catafest\\Downloads\\blender-2.80-e79bb957fc3-win64\\blender-2.80.0-git.e79bb957fc3-windows64\\blender.exe'
build cflags: /W3 /w34062 /w34189 /wd4018 /wd4146 /wd4065 /wd4127 /wd4181 /wd4200 /wd4244 /wd4267 /wd4305 /wd4800 /wd4828 /wd4996 /we4013 /we4133 /we4431 /w35038 /DWIN32 /D_WINDOWS /W3 /nologo /J /Gd /MP -openmp     
build cxxflags: /W3 /w34062 /w34189 /wd4018 /wd4146 /wd4065 /wd4127 /wd4181 /wd4200 /wd4244 /wd4267 /wd4305 /wd4800 /wd4828 /wd4996 /we4013 /we4133 /we4431 /w35038 /DWIN32 /D_WINDOWS /W3 /GR /EHsc /nologo /J /Gd /MP /EHsc -openmp     
build linkflags: /MACHINE:X64  /SUBSYSTEM:CONSOLE /STACK:2097152 /INCREMENTAL:NO  /NODEFAULTLIB:msvcrt.lib /NODEFAULTLIB:msvcmrt.lib /NODEFAULTLIB:msvcurt.lib /NODEFAULTLIB:msvcrtd.lib  /ignore:4049 /ignore:4217 /ignore:4221
build system: CMake

Python:
============================================

version: 3.7.0 (default, Aug 26 2018, 16:05:01) [MSC v.1900 64 bit (AMD64)]
paths:
...
Maybe is fixed into your version. My system-info show me this about the 2.80 beta (blender-2.80-e79bb957fc3-win64) : ``` ============================================ = Blender 2.80 (sub 35) System Information = ============================================ Blender: ============================================ version: 2.80 (sub 35), branch: blender2.8, commit date: 2018-12-08 17:06, hash: e79bb957fc3, type: Release build date: 08/12/2018, 17:54 platform: Windows binary path: 'C:\\Users\\catafest\\Downloads\\blender-2.80-e79bb957fc3-win64\\blender-2.80.0-git.e79bb957fc3-windows64\\blender.exe' build cflags: /W3 /w34062 /w34189 /wd4018 /wd4146 /wd4065 /wd4127 /wd4181 /wd4200 /wd4244 /wd4267 /wd4305 /wd4800 /wd4828 /wd4996 /we4013 /we4133 /we4431 /w35038 /DWIN32 /D_WINDOWS /W3 /nologo /J /Gd /MP -openmp build cxxflags: /W3 /w34062 /w34189 /wd4018 /wd4146 /wd4065 /wd4127 /wd4181 /wd4200 /wd4244 /wd4267 /wd4305 /wd4800 /wd4828 /wd4996 /we4013 /we4133 /we4431 /w35038 /DWIN32 /D_WINDOWS /W3 /GR /EHsc /nologo /J /Gd /MP /EHsc -openmp build linkflags: /MACHINE:X64 /SUBSYSTEM:CONSOLE /STACK:2097152 /INCREMENTAL:NO /NODEFAULTLIB:msvcrt.lib /NODEFAULTLIB:msvcmrt.lib /NODEFAULTLIB:msvcurt.lib /NODEFAULTLIB:msvcrtd.lib /ignore:4049 /ignore:4217 /ignore:4221 build system: CMake Python: ============================================ version: 3.7.0 (default, Aug 26 2018, 16:05:01) [MSC v.1900 64 bit (AMD64)] paths: ... ```

Please try a recent build from https://builder.blender.org/download/

Please try a recent build from https://builder.blender.org/download/

same bug with blender-2.80.0-git.f13a4b2f123-windows64 version

same bug with blender-2.80.0-git.f13a4b2f123-windows64 version

Added subscriber: @brecht

Added subscriber: @brecht

Does it still happen if you do File -> Load Factory Settings ?

@brecht I can't reproduce this and I don't think this is platform/hardware specific bug... Does this happen for you?

Does it still happen if you do File -> Load Factory Settings ? @brecht I can't reproduce this and I don't think this is platform/hardware specific bug... Does this happen for you?

I tested with File -> Load Factory Settings
Is the same bug as with only your difference :

  • if I set manual values over 100% then this values > 100% all add an "m" (from metric ?)
  • the shift values are stopping on 100% (this is good)
I tested with File -> Load Factory Settings Is the same bug as with only your difference : - if I set manual values over 100% then this values > 100% all add an "m" (from metric ?) - the shift values are stopping on 100% (this is good)
Howard Trickey was assigned by Brecht Van Lommel 2018-12-14 11:46:52 +01:00

It may be that Scene > Units > Unit Scale is set to a value other than 1.0?

It's not ideal that this width property is used for both distance and percentage, we don't want the unit system for the latter. Now that the unit system is enabled by default this problem is more apparent.

The solution we use in other places is to add a second width_percentage property for this case. It does not make a lot of sense to share the value anyway.

It may be that Scene > Units > Unit Scale is set to a value other than 1.0? It's not ideal that this width property is used for both distance and percentage, we don't want the unit system for the latter. Now that the unit system is enabled by default this problem is more apparent. The solution we use in other places is to add a second `width_percentage` property for this case. It does not make a lot of sense to share the value anyway.

Assigning to the bevel maintainer, but it should be possible for any developer to fix.

Assigning to the bevel maintainer, but it should be possible for any developer to fix.

This issue was referenced by b786416106

This issue was referenced by b786416106136ac5fd0b9ea55a0b0cf0c029243e
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

I fixed this as Brecht suggested, using a separate property for the percentage width offset type.

I will note that the original bug reporter may not understand what the percent button is for, as the bug report says "The bevel modifier can be selected with percent for weight" and specifies that to get the bug one should select the "Weight" limit method. These two things are not connected: the "Percent" button is in the "Width Method" section, and affects how the bevel amount is measured, while the "Weight button" is in the "Limit Method" and affects whether or not to only bevel edges whose bevel edge weight is greater than zero. My apologies if the bug reporter understood this; I was just confused by the wording of the bug report.

I fixed this as Brecht suggested, using a separate property for the percentage width offset type. I will note that the original bug reporter may not understand what the percent button is for, as the bug report says "The bevel modifier can be selected with percent for weight" and specifies that to get the bug one should select the "Weight" limit method. These two things are not connected: the "Percent" button is in the "Width Method" section, and affects how the bevel amount is measured, while the "Weight button" is in the "Limit Method" and affects whether or not to only bevel edges whose bevel edge weight is greater than zero. My apologies if the bug reporter understood this; I was just confused by the wording of the bug report.

Added subscriber: @capnm

Added subscriber: @capnm

@howardt by the way, when I look at your patch, with RNA_def_property_ui_range (prop, 0.0f, 100.0f, 5.0, 2); I would expect, that dragging over the value-bar should change it with the step value. It's mentioned as a mystery in source/blender/makesrna/intern/rna_define.c:1444. Is this intended or something that could be fixed?

@howardt by the way, when I look at your patch, with `RNA_def_property_ui_range (prop, 0.0f, 100.0f, 5.0, 2);` I would expect, that dragging over the value-bar should change it with the `step` value. It's mentioned as a mystery in `source/blender/makesrna/intern/rna_define.c:1444`. Is this intended or something that could be fixed?
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59151
No description provided.